--- a/Bakery/Bakery.csproj
+++ b/Bakery/Bakery.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <!-- <OutputType>Exe</OutputType> This is only needed if you have a user interface consisting of a Program.cs file with a Main() method. -->
+    <OutputType>Exe</OutputType> <!-- This is only needed if you have a user interface consisting of a Program.cs file with a Main() method. -->
   </PropertyGroup>
 
 </Project>
